examples/test/testpolicy1020.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1020
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key5: value21
      key41: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value21
      podSelector:
        matchLabels:
          key17: value42
          key40: value43
